# tasklane

./: README.md
backend/: main.py  pyproject.toml
backend/src/tasklane/: __init__.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  models.ts
frontend/src/components/: Board.tsx  BoardColumn.tsx  CardItem.tsx
