[project]
name = "tasklane"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Manuel Šarić", email = "manujelko@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
]

[project.scripts]
tasklane = "tasklane:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
